<resources>
    <string name="app_name">MAP_TRIAL</string>
    <string name="title_activity_maps">Map</string>
    <string name="input_password">ENTER yYOUR PASSWORD</string>
    <string name="auth_failed">AUTHENTICATION FAILED</string>
    <string name="Login">Login</string>
    <string name="No_account_warning" >No account yet? Create one</string>
    <string name="Email" >Email</string>
    <string name="Password" >Password</string>
    <string name="status" >LOADING</string>
    <string name="detail">DETAILS WILL BE ADDED LATER.</string>
    <string name="finally_it_fucking_appeared">FINALLY IT FUCKING APPEARED.</string>
    <string name="Bus1">BUS1</string>
    <string name="Bus2">BUS2</string>
    <string name="Bus3">BUS3</string>
    <string name="Bus4">BUS4</string>
    <string name="Bus5">BUS5</string>
    <string name="pick_me">PICK ME</string>
    <string name="distance">Distance : 0Km</string>
    <string name="time">Time : 0s</string>
    <string name="splash_screen">SPLASH SCREEN</string>
    <string name="normal">Normal</string>
    <string name="satellite">Satellite</string>
    <string name="type">Type:</string>
    <string name="terrain">Terrain</string>
    <string name="hybrid">Hybrid</string>
    <string name="_0_km">0 km</string>
    <string name="_0_min">0 min</string>
    <string name="log_out">Log Out</string>
    <string name="logging_out">Logging Out</string>
    <string name="google_direction_api_key">AIzaSyChXllnUaESuRZPDpSHtb3oyXgL1edHITg</string>
    <string name="cancel">Cancel</string>
</resources>
    <!--AIzaSyAy7qBp08l_M_TKotXX3TZyV3RQ7LZYdLg-->
    <!--AIzaSyCs3Ju_Y2iQOSfkVS34WaciT-U3KPUpLf0-->